# eledubby

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  TODO.md  WORK.md  build.sh  example_fx_config.toml  install.sh  llms.txt  publish.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  index.md
examples/: fx_cinematic.toml  fx_podcast.toml  fx_voice_enhancement.toml
issues/: 301.txt
src/eledubby/: __init__.py  __main__.py  adamdubpy.py  config.toml  eledubby.py
src/eledubby/api/: __init__.py  elevenlabs_client.py
src/eledubby/audio/: __init__.py  analyzer.py  extractor.py  processor.py  quality.py  segmenter.py
src/eledubby/utils/: __init__.py  checkpoint.py  progress.py  temp_manager.py
src/eledubby/video/: __init__.py  remuxer.py
tests/test_eledubby/: __init__.py  test_benchmarks.py  test_cast.py  test_e2e.py  test_integration.py  test_preview.py  test_voices.py  wav_helpers.py
tests/test_eledubby/api/: __init__.py  test_elevenlabs_client.py
tests/test_eledubby/audio/: __init__.py  test_analyzer.py  test_extractor.py  test_processor.py  test_quality.py  test_segmenter.py
tests/test_eledubby/utils/: __init__.py  test_checkpoint.py  test_temp_manager.py
